"Se hacen ajustes al Agente de IA: Pasa a llamarse ParodyAI"

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       const $text = $newMessage.querySelector('p')
 
       $text.textContent = text
-      $who.textContent = sender === 'bot' ? 'GPT' : 'Tú'
+      $who.textContent = sender === 'bot' ? 'ParodyAI' : 'Tú'
       $newMessage.classList.add(sender)
 
       $messages.appendChild($newMessage)
